feat: refresh auth token & save auth session
